# prxs

./: .gitignore  ARCH.md  BUILD.md  Cargo.toml  RATIONALE.md  README.md  USAGE.md  praxis.pfx  praxis_cert.pem  praxis_key.pem  self_sign.sh
.github/workflows/: rust.yml
src/: app.rs  config.rs  event.rs  handler.rs  input_state.rs  layout.rs  main.rs  request.rs  response_waiter.rs  tls_decrypt.rs  tui.rs  ui.rs
