[package]
name = "prxs"
version = "0.1.0"
authors = ["alex <alex0112@protonmail.com>", "june <june put your email here>"]
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rcgen = "0.11.3"
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["server", "client"] }