[package]
name = "prxs"
version = "0.1.0"
authors = ["alex <alex0112@protonmail.com>", "june <junewelker@gmail.com>"]
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", default-features = false }
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
# rcgen = { version = "0.11.3", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
hyper = { version = "0.14.27", default-features = false, features = ["server", "client", "http1", "tcp"] }
http = { version = "0.2.11", default-features = false }
uuid = { version = "1.5.0", default-features = false, features = ["v4"] }
futures-core = { version = "0.3.29", default-features = false }
futures-util = { version = "0.3.29", default-features = false }
clap = { version = "4.4.8", features = ["derive"] }
toml = "0.8.8"
clap-serde-derive = "0.2.1"
serde = "1.0.193"
dirs-next = "2.0.0"
hyper-tls = "0.5.0"
native-tls = "0.2.11"
